# PlanIt

./: .env  .env.example  .gitignore  Makefile  README.md  data_hash.py  docker-compose.yaml  dockerfile  dump.rdb  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_data.json  test_send.py
.github/workflows/: ci.yml
auth/: auth_schema.py
auth/routes/: auth_routes.py
auth/services/: validation.py
auth/utils/: helper.py  utils.py
certs/: jwt-private.pem  jwt-public.pem
core/: __init__.py  config.py  data_helper.py  rate_limit.py  redis.py  relation_schemas.py  setup.py
migrations/: env.py
migrations/versions/: 2026_01_20_1700-31aa18593d73_adding_a_data_into_db.py  9153a281a14e_added_user_id_to_task_and_password_to_.py  e546e7373b7e_create_user_and_tasks_tables.py
models/: __init__.py  task_model.py  user_model.py
routes/: auth_routes.py  task_routes.py  user_routers.py
schemas/: __init__.py  relation_schemas.py  task_schemas.py  user_schemas.py
services/: auth_validation.py  service.py  task_services.py  user_services.py
task/models/: task_model.py
task/routes/: task_routes.py
task/schemas/: task_schemas.py
task/services/: task_services.py
tests/: conftest.py
tests/api/: test_tasks.py  test_users.py
tests/helpers/: auth.py
user/models/: __init__.py  user_model.py
user/routes/: user_routers.py
user/schemas/: user_schemas.py
user/services/: user_services.py
utils/: auth_helper.py  auth_utils.py  data_helper.py  rate_limit.py
