[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.2",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "types-aiofiles>=25.1.0.20251011",
    "types-passlib>=1.7.7.20250602",
    "types-pyjwt>=1.7.1",
    "uvicorn>=0.40.0",
]
